--- a/public/css/style.css
+++ b/public/css/style.css
@@ -416,7 +416,7 @@ nav {
 }
 
 .banner .banner-img img {
-  width: 100%;
+  min-width: 100%;
   -o-object-fit: cover;
      object-fit: cover;
 }
@@ -695,7 +695,7 @@ nav {
             animation: sliderMini 90s linear 1.5s infinite alternate;
   }
   .banner #banner-img img {
-    max-width: 50%;
+    min-width: 50%;
   }
   .banner .banner-text h1 {
     font-size: 10rem;
